🦄 refactor(样式): 修改样式 修改图片加载方式

--- a/src/index.css
+++ b/src/index.css
@@ -4,3 +4,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+img{
+  @apply bg-gray-900;
+}
+
+.n-image img {
+  width: 100%;
+}
