--- a/public/icon/iconfont.css
+++ b/public/icon/iconfont.css
@@ -1,8 +1,8 @@
 @font-face {
   font-family: "iconfont"; /* Project id 2685283 */
-  src: url('iconfont.woff2?t=1702897818159') format('woff2'),
-       url('iconfont.woff?t=1702897818159') format('woff'),
-       url('iconfont.ttf?t=1702897818159') format('truetype');
+  src: url('iconfont.woff2?t=1703643214551') format('woff2'),
+       url('iconfont.woff?t=1703643214551') format('woff'),
+       url('iconfont.ttf?t=1703643214551') format('truetype');
 }
 
 .iconfont {
@@ -11,6 +11,10 @@
   font-style: normal;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+.icon-list:before {
+  content: "\e603";
 }
 
 .icon-maxsize:before {
