--- a/src/renderer/assets/css/base.css
+++ b/src/renderer/assets/css/base.css
@@ -5,3 +5,7 @@ body {
 .n-popover:has(.music-play) {
   border-radius: 1.5rem !important;
 }
+.n-popover {
+  border-radius: 0.5rem !important;
+  overflow: hidden !important;
+}
