--- a/src/renderer/assets/css/base.css
+++ b/src/renderer/assets/css/base.css
@@ -9,3 +9,7 @@ body {
   border-radius: 0.5rem !important;
   overflow: hidden !important;
 }
+.n-popover:has(.transparent-popover ) {
+  background-color: transparent !important;
+  padding: 0 !important;
+}
