✨ feat: 优化语言设置和国际化处理

--- a/src/renderer/assets/css/base.css
+++ b/src/renderer/assets/css/base.css
@@ -13,3 +13,7 @@ body {
   background-color: transparent !important;
   padding: 0 !important;
 }
+
+.settings-slider .n-slider-mark {
+  font-size: 10px !important;
+}
